--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EDUFINITE - Online English Tutor</title>
     <link rel="icon" href="/favicon.ico" />
+    <!-- Import Google Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@400;500;700&display=swap"
+    />
   </head>
   <body>
     <div id="root"></div>
